--- a/python.ipynb
+++ b/python.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4ceb1a0",
+   "cell_type": "markdown",
+   "id": "4660c5c9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# python is case sensitive programming Language"
+    "## python is case sensitive programming Language"
    ]
   },
   {
@@ -1802,6 +1800,22 @@
    "source": [
     "x = [1,]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7015506",
+   "metadata": {},
+   "source": [
+    "## If- else Statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "002e709c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1820,7 +1834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
